<resources>
    <string name="app_name">APP3_02</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usrname">username</string>
    <string name="passwd">password</string>
    <string name="click_here_to_login">click here to login!</string>
    <string name="cancel">cancel</string>
    <string name="sign_in">sign in</string>
    <string name="font_color">字体颜色</string>
    <string name="menu_item">普通菜单项</string>
    <string name="font_size">字体大小</string>
    <string name="big">大</string>
    <string name="medium">中</string>
    <string name="small">小</string>
    <string name="color">字体颜色</string>
    <string name="red">红色</string>
    <string name="black">黑色</string>
    <string name="verify">Please verify your identification:</string>
</resources>
